@@ -1,4 +1,4 @@
-.TH "dos2unix" "1" "dos2unix 5.0" "2010" ""
+.TH "dos2unix" "1" "dos2unix 5.0.1" "2010" ""
 
 .SH "NAME"
 
@@ -158,6 +158,8 @@ automatically skipped, because it are binary files.
 Get input from stdin and write output to stdout.
 .IP
 .B dos2unix
+.IP
+.B dos2unix \-l \-c mac
 
 .LP
 Convert and replace a.txt. Convert and replace b.txt.
