@@ -1,4 +1,4 @@
-.TH "unix2dos" "1" "unix2dos 5.0" "2010" ""
+.TH "unix2dos" "1" "unix2dos 5.0.1" "2010" ""
 
 .SH "NAME"
 
@@ -157,6 +157,8 @@ automatically skipped, because it are binary files.
 Get input from stdin and write output to stdout.
 .IP
 .B unix2dos
+.IP
+.B unix2dos \-l \-c mac
 
 .LP
 Convert and replace a.txt. Convert and replace b.txt.
